umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_recursive1.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 1"
molecule_lenient:
  success: false
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 1"
extended_molecule:
  success: false
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 1"
extended_molecule_lenient:
  success: false
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 1"
